--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-av": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
