--- a/app.json
+++ b/app.json
@@ -17,11 +17,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.visueats.visuEats"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": "Phase2 demo"
+    "description": "Phase2 demo",
+    "android": {
+      "package": "com.visueats.visuEats"
+    }
   }
 }
