--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
     "expo": "~38.0.8",
+    "expo-av": "~8.2.1",
     "expo-barcode-scanner": "^9.0.0",
     "expo-font": "~8.2.1",
     "expo-linear-gradient": "~8.2.1",
@@ -28,8 +29,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-web": "~0.11.7",
-    "expo-av": "~8.2.1"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
